[package]
name = "converge-provider-adapters"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Temporary non-LLM adapter staging for Converge"
documentation = "https://docs.rs/converge-provider-adapters"
keywords = ["adapter", "provider", "converge"]
categories = ["api-bindings", "web-programming"]

[dependencies]
converge-core.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
urlencoding = { workspace = true, optional = true }
regex-lite.workspace = true
quick-xml = { workspace = true, optional = true }
base64.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize = { workspace = true, optional = true }

# Async runtime used by async backend implementations
tokio.workspace = true

[features]
default = ["brave", "tavily", "feed"]

# Private convenience feature: any provider that needs HTTP pulls this in
_http = ["dep:reqwest"]

# Search, feed, embedding, and retrieval adapters still staged here.
qwen = ["_http"]
brave = ["_http", "dep:urlencoding"]
tavily = ["_http"]
feed = ["_http", "dep:quick-xml"]

# Stores
qdrant = []
all-vector = ["qdrant"]

# Security hardening (zeroize secrets on drop)
secure = ["dep:zeroize"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
wiremock.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dotenv.workspace = true

[lints]
workspace = true
