[package]
name = "converge-provider"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider implementations for Converge"
documentation = "https://docs.rs/converge-provider"
keywords = ["llm", "ai", "provider", "converge"]
categories = ["api-bindings", "web-programming"]

[dependencies]
converge-core.workspace = true
converge-pack.workspace = true
converge-provider-api.workspace = true
converge-optimization.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
urlencoding = { workspace = true, optional = true }
regex-lite.workspace = true
quick-xml = { workspace = true, optional = true }
base64.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize = { workspace = true, optional = true }

# Async runtime used by async backend implementations
tokio.workspace = true

[features]
default = ["anthropic", "gemini", "openai", "openrouter", "mistral", "arcee", "writer", "minmax", "kong", "staik", "registry", "brave", "tavily", "feed"]

# Private convenience feature: any provider that needs HTTP pulls this in
_http = ["dep:reqwest"]

# Providers
anthropic = ["_http"]
gemini = ["_http"]
openai = ["_http"]
ollama = ["_http"]
qwen = ["_http"]
deepseek = ["_http"]
mistral = ["_http"]
openrouter = ["_http"]
perplexity = ["_http"]
grok = ["_http"]
kimi = ["_http"]
kong = ["_http"]
staik = ["_http"]
arcee = ["_http"]
writer = ["_http"]
minmax = ["_http"]
baidu = ["_http", "dep:urlencoding"]
zhipu = ["_http"]
apertus = ["_http"]
brave = ["_http", "dep:urlencoding"]
tavily = ["_http"]
feed = ["_http", "dep:quick-xml"]
# Registry and Matchmaking
registry = []

# Stores
qdrant = []
all-vector = ["qdrant"]

# Security hardening (zeroize secrets on drop)
secure = ["dep:zeroize"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
wiremock.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dotenv.workspace = true

[lints]
workspace = true
