[package]
name = "converge-provider"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The capability and backend selection contract for Converge providers"
keywords = ["converge", "provider", "backend", "selection"]
categories = ["api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true

[lints]
workspace = true
