[package]
name = "converge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "LicenseRef-Proprietary"
publish = false
description = "Converge Agent OS runtime - HTTP/gRPC server, consensus, crypto, identity"
keywords = ["converge", "runtime", "grpc", "server", "agent"]
categories = ["web-programming", "network-programming"]

[[bin]]
name = "converge-runtime"
path = "src/main.rs"

[dependencies]
# Converge crates
converge-core.workspace = true
converge-experience.workspace = true
converge-protocol = { workspace = true, optional = true }
converge-provider.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# gRPC / Protobuf
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
semver.workspace = true
strum.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Crypto
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hmac.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

# Auth
jsonwebtoken.workspace = true

# Date/time
chrono.workspace = true

# HTTP client
reqwest.workspace = true

# NATS messaging
async-nats.workspace = true

# Async traits
async-trait.workspace = true

# OpenAPI
utoipa.workspace = true

# WASM runtime
wasmtime = { workspace = true, optional = true }

# Database
firestore = { workspace = true, optional = true }

uuid.workspace = true
hostname.workspace = true
regex.workspace = true
base64.workspace = true
rand.workspace = true
hex = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio-test.workspace = true
http-body-util.workspace = true

[features]
default = ["grpc", "auth"]
wasm-runtime = ["wasm", "dep:hex"]
grpc = [
    "dep:converge-protocol",
    "dep:tonic",
    "dep:prost",
    "dep:prost-types",
    "dep:tonic-build",
]
wasm = ["dep:wasmtime"]
gcp = ["dep:firestore"]
auth = []
firebase = ["auth"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
security = []
nats = []
crypto = []

[lints]
workspace = true
