[package]
name = "converge-storage"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Object storage contract types for Converge"
keywords = ["storage", "object-store", "converge"]
categories = ["filesystem"]

[dependencies]
object_store.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
