[package]
name = "example-analytics-packs"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../crates/kernel" }
converge-analytics = { path = "../../crates/analytics" }
converge-optimization = { path = "../../crates/optimization" }
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
