[package]
name = "example-expense-approval"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-core = { path = "../../crates/core" }
converge-policy = { path = "../../crates/policy" }
converge-domain = { path = "../../crates/domain" }
async-trait.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
