[package]
name = "example-fixed-point-vs-budget"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../crates/kernel" }
converge-optimization = { path = "../../crates/optimization" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
