[package]
name = "example-formation-mixed"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../crates/kernel" }
converge-optimization = { path = "../../crates/optimization" }
converge-pack = { path = "../../crates/pack" }
converge-policy = { path = "../../crates/policy" }
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
