[package]
name = "example-intent-codec-loop"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-core = { path = "../../crates/core" }
converge-kernel = { path = "../../crates/kernel" }
converge-optimization = { path = "../../crates/optimization" }
converge-provider = { path = "../../crates/provider", default-features = false }
converge-provider-api = { path = "../../crates/provider-api" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
