[package]
name = "example-live-formation"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../crates/kernel" }
converge-core = { path = "../../crates/core" }
converge-pack = { path = "../../crates/pack" }
converge-optimization = { path = "../../crates/optimization" }
converge-provider = { path = "../../crates/provider" }
converge-provider-api = { path = "../../crates/provider-api" }
converge-policy = { path = "../../crates/policy" }
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
