[package]
name = "example-meeting-scheduler"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../crates/kernel" }
converge-domain = { path = "../../crates/domain" }
tokio.workspace = true
converge-experience = { path = "../../crates/experience" }
serde_json = "1"
