[package]
name = "example-vendor-selection"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../crates/kernel" }
converge-pack = { path = "../../crates/pack" }
converge-policy = { path = "../../crates/policy" }
converge-domain = { path = "../../crates/domain" }
async-trait.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
